# wasm-node-editor

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.devcontainer/: dev.Dockerfile  devcontainer.json  updateContent.sh
client/: index.html
client/js/: client.js
native/: CMakeLists.txt  callbacks_native.cpp
server/: server.js
src/: api.cpp  api.h  callbacks.h  callbacks_common.cpp  commands.cpp  commands.h  editor.h  factory.hpp  graph.cpp  graph.h  hello.cpp  id_generator.h  link.cpp  link.h  main.cpp  node.cpp  node.h  node_editor.cpp  node_editor.h  properties.cpp  properties.h  property_editor.cpp  property_editor.h  property_editors.cpp  utils.cpp  utils.h  window.cpp  window.h
src/commands/: command.h  createNode.h  deleteNode.h
src/handles/: editor.cpp  editor.h  graph.cpp  graph.h  node.cpp  node.h  port.cpp  port.h  property.cpp  property.h  propertyEditors.cpp
src/utils/: factory.hpp  string_splitter.hpp
wasm/: CMakeLists.txt  callbacks_wasm.cpp
